--- a/style/reset.css
+++ b/style/reset.css
@@ -26,60 +26,83 @@ header {
   display: flex;
   width: 85%;
   margin: 0 auto;
-  height: 5rem;
   justify-content: space-between;
   align-items: center;
   background-color: #fff;
 }
 
 header .logo {
-  width: 40%;
-}
-
-header .logo a {
   display: inline;
+  width: 10%;
 }
 
-header .logo a img {
-  width: 20%;
+header .logo img {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
 }
 
-header nav {
+header .pcNav {
   width: 60%;
 }
 
-header nav ul {
+header .pcNav ul {
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
 
-header nav ul li {
+header .pcNav ul li {
   cursor: pointer;
   font-weight: bold;
-  font-size: 1rem;
-  width: 8rem;
   text-align: center;
-  height: 5rem;
-  line-height: 5rem;
 }
 
-header nav ul li a {
-  width: auto;
-  line-height: 5rem;
-  height: 5rem;
+header .pcNav ul li a {
   text-align: center;
-  font-size: inherit;
 }
 
-header nav ul li a:hover {
+header .pcNav ul li a:hover {
   border-bottom: 5px solid #006FD4;
 }
 
-header nav ul .far {
-  cursor: pointer;
-  line-height: 5rem;
+header .pcNav ul .far {
+  margin-left: 1rem;
   font-size: 1.2rem;
+  cursor: pointer;
+}
+
+header .mobileNav .hamburgerMenu {
+  position: relative;
+  width: 30px;
+  height: 24px;
+}
+
+header .mobileNav .hamburgerMenu .line {
+  display: block;
+  background-color: #000;
+  height: 2px;
+  width: 100%;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+header .mobileNav .hamburgerMenu .line::before, header .mobileNav .hamburgerMenu .line::after {
+  content: '';
+  background-color: #000;
+  height: 2px;
+  width: 100%;
+  position: absolute;
+}
+
+header .mobileNav .hamburgerMenu .line::before {
+  top: 10px;
+}
+
+header .mobileNav .hamburgerMenu .line::after {
+  top: -10px;
 }
 
 .modal {
@@ -88,8 +111,6 @@ header nav ul .far {
   z-index: 9;
   top: 15%;
   right: 2%;
-  width: 20%;
-  height: 30%;
   background-color: #fff;
 }
 
@@ -101,8 +122,6 @@ header nav ul .far {
 
 .modal .loginWrapper input {
   border: 1px solid #ddd;
-  font-size: 0.8rem;
-  padding: 0.5rem;
   margin: 3% 0;
 }
 
@@ -118,9 +137,6 @@ header nav ul .far {
   color: #fff;
   border: none;
   background-color: #006FD4;
-  font-size: 0.8rem;
-  padding: 0.5rem 1rem;
-  width: 5rem;
 }
 
 .active {
@@ -163,7 +179,6 @@ footer {
   width: 100%;
   display: block;
   background-color: #fff;
-  height: 8rem;
 }
 
 footer .footerWrapper {
@@ -175,19 +190,102 @@ footer .footerWrapper {
   align-items: center;
 }
 
-footer .footerWrapper img {
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  position: absolute;
-  width: 7%;
-}
-
 footer .footerWrapper .infoWrapper {
   margin: 0 auto;
 }
 
-footer .footerWrapper .infoWrapper span {
-  margin: 0 1rem;
-  font-size: 0.75rem;
+@media screen and (max-width: 1600px) {
+  header {
+    height: 5rem;
+  }
+  header .logo {
+    height: 5rem;
+  }
+  header .pcNav {
+    height: 5rem;
+  }
+  header .pcNav ul li a {
+    width: 8rem;
+    line-height: 5rem;
+    height: 5rem;
+    font-size: 1rem;
+  }
+  footer .footerWrapper .infoWrapper {
+    font-size: 0.75rem;
+  }
+  footer .footerWrapper .infoWrapper span {
+    font-size: 1em;
+    margin: 0 1em;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  header {
+    height: 4rem;
+  }
+  header .logo {
+    height: 4rem;
+  }
+  header .pcNav {
+    height: 4rem;
+  }
+  header .pcNav ul li a {
+    width: 7rem;
+    line-height: 4rem;
+    height: 4rem;
+    font-size: 0.85rem;
+  }
+  header .pcNav ul .far {
+    font-size: 1rem;
+  }
+  header .mobileNav {
+    display: none;
+  }
+  footer {
+    height: 8rem;
+    height: 6rem;
+  }
+  footer .footerWrapper img {
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    position: absolute;
+    width: 7%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  header .logo {
+    width: 20%;
+  }
+  header .pcNav {
+    display: none;
+  }
+  header .mobileNav {
+    display: block;
+  }
+  footer {
+    height: auto;
+    padding: 1rem 0;
+  }
+  footer .footerWrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  footer .footerWrapper img {
+    margin-bottom: 1rem;
+    top: 0;
+    transform: none;
+    width: 10%;
+    position: relative;
+  }
+  footer .footerWrapper .infoWrapper {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  footer .footerWrapper .infoWrapper span {
+    padding: 0.5rem 0;
+    font-size: 1em;
+  }
 }
