--- a/scss/index.scss
+++ b/scss/index.scss
@@ -293,3 +293,21 @@
     }
     
 }
+
+@include mobile{
+    .mainWrapper{
+        .mainIntro{
+            font-size: 1.2rem;
+        }
+    }
+
+    .mobileBoardNav{
+        .mainNav{
+            li{
+                a{
+                    font-size: 0.8rem;
+                }
+            }
+        }
+    }
+}
