--- a/style/index.css
+++ b/style/index.css
@@ -110,7 +110,51 @@
   color: #fff;
 }
 
+@media screen and (min-width: 1600px) {
+  .mobileBoardNav {
+    display: none;
+  }
+  .mainWrapper {
+    height: 90%;
+  }
+  .mainIntro {
+    font-size: 2.2rem;
+  }
+  .mainIntro h1 {
+    font-size: 1em;
+  }
+  .mainIntro h2 {
+    margin: 3% 0;
+    font-size: 0.55em;
+    line-height: 3rem;
+  }
+  .mainIntro a {
+    font-size: 1rem;
+    padding: 1rem 2.5rem;
+  }
+  .mainNav-list a {
+    padding: 1.5rem 2rem;
+  }
+  .mainNav-list a .fa-chevron-right {
+    margin-left: 1rem;
+  }
+  .mainNav-list .subNav a {
+    font-size: 0.9rem;
+  }
+  .mainNav-list .subNav a span {
+    margin-right: 1rem;
+    font-size: 0.9rem;
+    padding: 0.5rem 1rem;
+  }
+}
+
 @media screen and (max-width: 1600px) {
+  .mobileBoardNav {
+    display: none;
+  }
+  .mainWrapper {
+    height: 90%;
+  }
   .mainIntro {
     font-size: 2.2rem;
   }
@@ -143,6 +187,9 @@
 }
 
 @media screen and (max-width: 1024px) {
+  .mobileBoardNav {
+    display: none;
+  }
   .mainWrapper {
     height: 90%;
   }
